[gd_scene load_steps=12 format=3 uid="uid://c0k5smcwm6xdd"]

[ext_resource type="Script" uid="uid://3l5j65gwnvjs" path="res://scripts/player.gd" id="1_onrkg"]
[ext_resource type="PackedScene" uid="uid://c33lg16lidlgn" path="res://scenes/weapons/dart.tscn" id="2_i3pqv"]
[ext_resource type="PackedScene" uid="uid://ts7e4oe1d1vi" path="res://scenes/weapons/pool_cue.tscn" id="3_1jxqw"]
[ext_resource type="Texture2D" uid="uid://bfy11m2vs0lr4" path="res://art/mike.png" id="4_1jxqw"]
[ext_resource type="Shader" uid="uid://gttttj6d68ci" path="res://scripts/shaders/main.gdshader" id="4_hqtel"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_sweqy"]
shader = ExtResource("4_hqtel")
shader_parameter/vignette_intensity = 0.4
shader_parameter/vignette_opacity = 0.5
shader_parameter/vignette_rgb = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_hqtel"]
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sweqy"]
resource_name = "damage_taken"
length = 0.1
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_i3pqv"]
resource_name = "idle"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1.02), Vector2(1, 0.98)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_sweqy"]
_data = {
&"RESET": SubResource("Animation_hqtel"),
&"damage_taken": SubResource("Animation_sweqy"),
&"idle": SubResource("Animation_i3pqv")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2hs0m"]
radius = 16.0
height = 64.0

[node name="Player" type="CharacterBody2D"]
top_level = true
script = ExtResource("1_onrkg")
dart_scene = ExtResource("2_i3pqv")
pool_cue_scene = ExtResource("3_1jxqw")
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -61)
scale = Vector2(0.4, 0.4)
texture = ExtResource("4_1jxqw")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Shader" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/Shader"]
top_level = true
material = SubResource("ShaderMaterial_sweqy")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="SpecialAttackCooldown" type="Timer" parent="."]
wait_time = 1.5
one_shot = true

[node name="InvulnerabilityTimer" type="Timer" parent="."]
one_shot = true

[node name="IdleAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sweqy")
}
autoplay = "idle"

[node name="InvulnerabilityAnimation" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_sweqy")
}
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource("CapsuleShape2D_2hs0m")

[connection signal="timeout" from="InvulnerabilityTimer" to="." method="_on_invulnerability_timer_timeout"]
